[package]
name = "media_shop"
version = "0.1.0"
authors = ["JieamI"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
image = { version = "0.24.1", default-features = false, features = ["jpeg", "png", "bmp", "ico"] }
opencv = { version = "0.63.1", optional = true }
wasm-bindgen = "0.2.80"

[profile.release]
# opt-level = 3
opt-level = "s"

[features]
default = ["console_error_panic_hook"]


[[bin]]
name = "test"
path = "./src/main.rs"
